--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 <body>
 
 <div class="card" id="card">
-  <img src="https://i.imgur.com/3XjQZ1P.png" alt="Teddy"/>
-  <h2>Hi <span id="BUBU(Devu)">You</span> 💖</h2>
+  <img src="Teddy.JPEG" alt="Teddy"/>
+  <h2>Hi <span id="name">BUBU(Devu)</span> 💖</h2>
   <h3>Will you be my Valentine? 💌</h3>
   <p>Oh no… seems to be a little shy 🥺</p>
 
