--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
 
 <div class="card" id="card">
-  <img src="Teddy.JPEG" alt="Teddy"/>
+  <img src="teddy.jpeg" alt="Teddy"/>
   <h2>Hi <span id="name">BUBU(Devu)</span> 💖</h2>
   <h3>Will you be my Valentine? 💌</h3>
   <p>Oh no… seems to be a little shy 🥺</p>
